# MEGNetSparse

./: .gitignore  README.md  pyproject.toml  setup.cfg
MEGNetSparse/: __init__.py  dense2sparse.py  eos.py  losses.py  trainer.py  utils.py
examples/: descriptors.csv  example.ipynb  initial_structures.csv
src/: dense2sparse.py  eos.py  model.py  struct2graph.py  test.py  trainer.py
