[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MEGNetSparse"
version = "0.0.5"
authors = [
  { name="Romanov Ignat", email="romanov.ignat.p@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies=[
    "tqdm",
    "numpy",
    "pymatgen",
    "joblib"
]

[project.urls]
"Homepage" = "https://github.com/RomanovIgnat/MEGNet_pytorch_test"
