[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MEGNetSparse"
version = "0.0.9"
authors = [
  { name="Romanov Ignat", email="romanov.ignat.p@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies=[
    "tqdm",
    "numpy",
    "pymatgen",
    "joblib"
]

[project.urls]
"Homepage" = "https://github.com/HSE-LAMBDA/MEGNetSparse"
